feat: add footer layout

--- a/art-quiz/src/index.html
+++ b/art-quiz/src/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Art Quiz</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header></header>
+    <main></main>
+    <footer>
+      <div class="footer__wr">
+        <nav class="footer-nav">
+          <input type="radio" id="navHome" name="Home" value="home" checked />
+          <label class="nav-home" for="navHome"></label>
+          <input
+            type="radio"
+            id="navSettings"
+            name="Settings"
+            value="settings"
+          />
+          <label class="nav-settings" for="navSettings"></label>
+        </nav>
+        <div class="footer-about">
+          <a class="rs-school" href="https://rs.school/js/"></a>
+          <span class="app-date">2021</span>
+          <a class="my-git" href="https://github.com/denis0ff"></a>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
