feat: add bone of SPA

--- a/art-quiz/src/index.html
+++ b/art-quiz/src/index.html
@@ -4,30 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="./assets/images/svg/favicon.svg" rel="shortcut icon" />
     <title>Art Quiz</title>
   </head>
   <body>
-    <header></header>
-    <main></main>
-    <footer>
-      <div class="footer__wr">
-        <nav class="footer-nav">
-          <input type="radio" id="navHome" name="Home" value="home" checked />
-          <label class="nav-home" for="navHome"></label>
-          <input
-            type="radio"
-            id="navSettings"
-            name="Settings"
-            value="settings"
-          />
-          <label class="nav-settings" for="navSettings"></label>
-        </nav>
-        <div class="footer-about">
-          <a class="rs-school" href="https://rs.school/js/"></a>
-          <span class="app-date">2021</span>
-          <a class="my-git" href="https://github.com/denis0ff"></a>
-        </div>
-      </div>
-    </footer>
+    <header id="header"></header>
+    <main id="main"></main>
+    <footer id="footer"></footer>
   </body>
 </html>
