feat: add a few basic templates with stylization

--- a/art-quiz/src/index.html
+++ b/art-quiz/src/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <header id="header"></header>
-    <main id="main"></main>
+    <main id="main">
+        <h1 class="main-header">Art Quiz</h1>
+    </main>
     <footer id="footer"></footer>
   </body>
 </html>
