--- a/art-quiz/src/index.html
+++ b/art-quiz/src/index.html
@@ -8,6 +8,7 @@
     <title>Art Quiz</title>
   </head>
   <body>
+    <div id='hider'></div>
     <header id="header"></header>
     <main id="main">
       <h1 class="main-header">Art Quiz</h1>
