fix: minor stylization fixes

--- a/art-quiz/src/index.html
+++ b/art-quiz/src/index.html
@@ -8,11 +8,13 @@
     <title>Art Quiz</title>
   </head>
   <body>
-    <div id='hider'></div>
-    <header id="header"></header>
-    <main id="main">
-      <h1 class="main-header">Art Quiz</h1>
-    </main>
-    <footer id="footer"></footer>
+    <div id="hider"></div>
+    <div id="wrapper">
+      <header id="header"></header>
+      <main id="main">
+        <h1 class="main-header">Art Quiz</h1>
+      </main>
+      <footer id="footer"></footer>
+    </div>
   </body>
 </html>
